--- a/src/app.scss
+++ b/src/app.scss
@@ -14,6 +14,7 @@ body {
   --accent: #17e;
   --accent-text: #fff;
   --text: #fff;
+  --text-dimmed: #fff6;
   --modal-transition: 240ms cubic-bezier(0.38, 0, 0, 0.96);
 }
 
@@ -28,6 +29,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .red {
@@ -92,4 +94,13 @@ input[type="number"] {
 
 * {
   margin: 0;
+}
+
+select {
+  option {
+    background: var(--bg);
+    &:hover {
+      background: var(--fg);
+    }
+  }
 }
