--- a/src/app.scss
+++ b/src/app.scss
@@ -1,4 +1,4 @@
-@import url('https://rsms.me/inter/inter.css');
+@import url("https://rsms.me/inter/inter.css");
 
 :root {
   color-scheme: dark;
@@ -51,10 +51,14 @@ body {
 }
 
 * {
-  font-family: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-button, input, select, textarea {
+button,
+input,
+select,
+textarea {
   background: none;
   border: 2px solid var(--fg);
   font-size: 1rem;
@@ -67,7 +71,8 @@ button, input, select, textarea {
   }
 }
 
-input, textarea {
+input,
+textarea {
   cursor: text;
 }
 
@@ -103,4 +108,13 @@ select {
       background: var(--fg);
     }
   }
+}
+
+.minilabel {
+  position: absolute;
+  bottom: -5px;
+  right: 12px;
+  font-size: 8px;
+  background: var(--bg);
+  padding-inline: 3px;
 }
