--- a/src/app.scss
+++ b/src/app.scss
@@ -16,6 +16,11 @@ body {
   --text: #fff;
   --text-dimmed: #fff6;
   --modal-transition: 240ms cubic-bezier(0.38, 0, 0, 0.96);
+  --spacing: 2px;
+  --rounding: 2px;
+  --spacing: 12px;
+  --rounding: 12px;
+  --spacing-required: max(var(--spacing), 8px);
 }
 
 body {
@@ -64,8 +69,8 @@ textarea {
   background: none;
   border: 2px solid var(--fg);
   font-size: 1rem;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
+  border-radius: calc(var(--spacing) * 0.7);
+  padding: calc(var(--spacing) * 0.7);
   cursor: pointer;
   &:disabled {
     filter: contrast(0.8);
@@ -90,13 +95,13 @@ input[type="number"] {
 .horiz {
   display: flex;
   align-items: center;
-  gap: 12px;
+  gap: var(--spacing);
 }
 
 .verti {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: var(--spacing);
 }
 
 * {
