--- a/src/app.scss
+++ b/src/app.scss
@@ -16,8 +16,6 @@ body {
   --text: #fff;
   --text-dimmed: #fff6;
   --modal-transition: 240ms cubic-bezier(0.38, 0, 0, 0.96);
-  --spacing: 2px;
-  --rounding: 2px;
   --spacing: 12px;
   --rounding: 12px;
   --spacing-required: max(var(--spacing), 8px);
@@ -36,6 +34,11 @@ body {
   align-items: center;
   justify-content: center;
   overflow: hidden;
+}
+
+.miniMode {
+  --spacing: 2px;
+  --rounding: 2px;
 }
 
 .red {
