style changes and redo scene sizing method

--- a/src/app.scss
+++ b/src/app.scss
@@ -71,7 +71,7 @@ textarea {
   color: inherit;
   background: none;
   border: 2px solid var(--fg);
-  font-size: 1rem;
+  font-size: 0.8em;
   border-radius: calc(var(--spacing) * 0.7);
   padding: calc(var(--spacing) * 0.7);
   cursor: pointer;
