--- a/src/app.scss
+++ b/src/app.scss
@@ -13,6 +13,7 @@ body {
 	--green-text: #000;
 	--accent: #17e;
 	--accent-text: #fff;
+	--yellow: #fe0;
 	--text: #fff;
 	--text-dimmed: #fff6;
 	// --modal-transition: 240ms cubic-bezier(0.38, 0, 0, 0.96);
@@ -20,6 +21,11 @@ body {
 	--spacing: 12px;
 	--rounding: 12px;
 	--spacing-required: max(var(--spacing), 8px);
+	--top-height: 3.5rem;
+}
+
+body.miniMode {
+	--top-height: 2.75rem;
 }
 
 body {
@@ -38,11 +44,7 @@ body {
 }
 
 .material-symbols-outlined {
-	font-variation-settings:
-		'FILL' 0,
-		'wght' 400,
-		'GRAD' 0,
-		'opsz' 24;
+	font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
 }
 
 .miniMode {
@@ -74,9 +76,9 @@ body {
 	border-color: transparent;
 }
 
-* {
-	font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+body {
+	font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
+		"Open Sans", "Helvetica Neue", sans-serif;
 }
 
 button,
@@ -84,6 +86,7 @@ input,
 select,
 textarea {
 	color: inherit;
+	font-family: inherit;
 	background: none;
 	border: 2px solid var(--fg);
 	font-size: 0.8em;
@@ -144,7 +147,8 @@ select {
 	padding-inline: 3px;
 }
 
-body, html {
+body,
+html {
 	position: fixed;
 }
 
@@ -154,4 +158,34 @@ body, html {
 	gap: 4px;
 	height: 1em;
 	vertical-align: text-top;
+}
+
+details {
+	border: 2px solid var(--fg);
+	border-radius: var(--rounding);
+	padding: var(--spacing);
+	box-sizing: border-box;
+	overflow: hidden;
+	flex-shrink: 0;
+	& > summary {
+		transition: background 120ms;
+		cursor: pointer;
+		margin: calc(var(--spacing) * -1);
+		padding: var(--spacing);
+		user-select: none;
+		// border-top-left-radius: var(--rounding);
+		// border-top-right-radius: var(--rounding);
+	}
+	&[open] {
+		& > summary {
+			margin-bottom: var(--spacing);
+			background: var(--fg);
+		}
+	}
+}
+
+input[type="checkbox"] {
+	width: 1em;
+	height: 1em;
+	cursor: pointer;
 }
