add tabs to settings, make toasts stack, cleanup

--- a/src/app.scss
+++ b/src/app.scss
@@ -43,10 +43,6 @@ body {
 	overflow: hidden;
 }
 
-.material-symbols-outlined {
-	font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
-}
-
 .miniMode {
 	--spacing: 2px;
 	--rounding: 2px;
@@ -96,6 +92,31 @@ textarea {
 	&:disabled {
 		filter: contrast(0.8);
 		opacity: 0.8;
+	}
+}
+
+.tabber {
+	display: inline-flex;
+	> button {
+		margin: 0;
+		&:first-child {
+			border-top-right-radius: 0;
+			border-bottom-right-radius: 0;
+			border-right: none;
+		}
+		&:not(:first-child):not(:last-child) {
+			border-radius: 0;
+			border-right: none;
+		}
+		&:last-child {
+			border-top-left-radius: 0;
+			border-bottom-left-radius: 0;
+		}
+
+		&[aria-selected="true"] {
+			background: var(--text);
+			color: var(--bg);
+		}
 	}
 }
 
