--- a/src/app.scss
+++ b/src/app.scss
@@ -15,6 +15,7 @@ body {
 	--accent-bright: rgb(65, 154, 255);
 	--accent-text: #fff;
 	--yellow: #fe0;
+	--yellow-text: #000;
 	--text: #fff;
 	--text-dimmed: #fff6;
 	// --modal-transition: 240ms cubic-bezier(0.38, 0, 0, 0.96);
@@ -58,6 +59,12 @@ body {
 .green {
 	background-color: var(--green);
 	color: var(--green-text);
+	border-color: transparent;
+}
+
+.yellow {
+	background-color: var(--yellow);
+	color: var(--yellow-text);
 	border-color: transparent;
 }
 
