--- a/src/app.scss
+++ b/src/app.scss
@@ -20,14 +20,19 @@ body {
 	--text-dimmed: #fff6;
 	// --modal-transition: 240ms cubic-bezier(0.38, 0, 0, 0.96);
 	--modal-transition: 240ms cubic-bezier(0.175, 0.885, 0.32, 1.03);
-	--spacing: 12px;
-	--rounding: 12px;
 	--spacing-required: max(var(--spacing), 8px);
 	--top-height: 3.5rem;
 }
 
-body.miniMode {
+body, dialog {
+	--spacing: 12px;
+	--rounding: 12px;
+}
+
+.miniMode {
 	--top-height: 2.75rem;
+	--spacing: 2px;
+	--rounding: 2px;
 }
 
 body {
@@ -43,11 +48,6 @@ body {
 	align-items: center;
 	justify-content: center;
 	overflow: hidden;
-}
-
-.miniMode {
-	--spacing: 2px;
-	--rounding: 2px;
 }
 
 .red {
